"copy mirrored uv coords" doesn't work #35453

Closed
opened 2013-05-21 09:29:55 +02:00 by S S · 3 comments

%%%--- Operating System, Graphics card ---
windows 7 64bit, GTX650ti

- Blender version with error, and version that worked ---

blender 2.67 64bit r56934, 2.67 64bit, 2.66a 64bit, 2.64a 64bit with error

- Short description of error ---

the function "copy mirrored uv coords" doesn't work. For example, if I make a UVSphere, and unwrap the left part of it. Then I want to use the function "copy mirrored uv coords" to make the right part copy the uv of left part. But the result is not right.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I upload two file, the first is a UVSphere and the second is Suzanne, both of them are half unwrapped. you can open one of them. I have already select the part without unwrapping, so you can just use the function "copy mirrored uv coods". After executing the function, you will see the result is not right.

%%%

%%%--- Operating System, Graphics card --- windows 7 64bit, GTX650ti - Blender version with error, and version that worked --- blender 2.67 64bit r56934, 2.67 64bit, 2.66a 64bit, 2.64a 64bit with error - Short description of error --- the function "copy mirrored uv coords" doesn't work. For example, if I make a UVSphere, and unwrap the left part of it. Then I want to use the function "copy mirrored uv coords" to make the right part copy the uv of left part. But the result is not right. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I upload two file, the first is a UVSphere and the second is Suzanne, both of them are half unwrapped. you can open one of them. I have already select the part without unwrapping, so you can just use the function "copy mirrored uv coods". After executing the function, you will see the result is not right. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r57244.

  • Sphere needs a lower precision (now configurable)
  • Monkey has doubles, which now report a warning.
    %%%
%%%fixed r57244. - Sphere needs a lower precision (now configurable) - Monkey has doubles, which now report a warning. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35453
No description provided.