fix [#35453] "copy mirrored uv coords" doesn't work

- made precision configurable.
- report a warning when doubles are found since they cause problems.

added Polygon.center attribute to avoid calculating in python.